--- a/Pairprogramming/package.json
+++ b/Pairprogramming/package.json
@@ -6,7 +6,9 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
+    "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -19,6 +21,8 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "socket-io": "^1.0.0",
     "socket.io": "^2.2.0",
     "static-favicon": "^2.0.0-alpha"
