added test case

--- a/Pairprogramming/package.json
+++ b/Pairprogramming/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "node_modules/mocha/bin/mocha --exit"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -26,5 +27,13 @@
     "socket-io": "^1.0.0",
     "socket.io": "^2.2.0",
     "static-favicon": "^2.0.0-alpha"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^6.1.4",
+    "mocha-junit-reporter": "^1.22.0",
+    "superagent": "^5.0.2",
+    "supertest": "^4.0.2"
   }
 }
